# flask-postgresql-sample

./: README.rst  config.py  pyproject.toml  requirements.txt  uiti.db
flask_postgresql_sample/: __init__.py  models.py
flask_postgresql_sample/static/: style.css
flask_postgresql_sample/static/js/: main.js
flask_postgresql_sample/templates/: base.html  upload_csv.html
flask_postgresql_sample/templates/question/: question_detail.html  question_form.html
flask_postgresql_sample/views/: answer_views.py  main_views.py  question_views.py  upload_views.py
migrations/versions/: a083780cfad6_.py
tests/: test_flask_postgresql_sample.py
